feat(project): 添加租户管理（平台）页面，增加角色管理界面